widget_derive/tests/ui/declare/widget_before_field_fail.stderr
error: Field should alwyas declare before children.
 --> $DIR/widget_before_field_fail.rs:8:7
  |
8 |       size
  |       ^^^^
